# FundingRateNotify

./: .env.example  Cargo.toml  README.md
config/: config.toml
src/: config.rs  main.rs
src/bybit/: api.rs
src/notifier/: mod.rs  pushover.rs
